# thronetalk-game-of-thrones-summarizer

./: .gitignore  .pylintrc  Episode_Summarizer_UI_V2.py  LICENSE  README.md  app.py  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: build_test.yml
Docs/: Component Specification.md  Functional Specification.md
data/: episodes_metadata.csv  game-of-thrones.csv  ouput_dialogues.csv  show_metadata.json
docs/: Component Specification.md  Functional Specification.md
examples/: README.md  data.ipynb  site_navigation.md
scripts/: __init__.py  data_analysis.py  data_cleaning.ipynb  data_cleaning.py  get_metadata.py  model.py  visualization_generator.py
tests/: mock_functions.py  test_get_metadata.py  test_visualization_generator.py
thronetalk-game-of-thrones-summarizer/: .coveragerc  app.py
thronetalk-game-of-thrones-summarizer/data/: Season_Episode_MultiEpisode.csv
thronetalk-game-of-thrones-summarizer/tests/: mock_constants.py  mock_functions.py  test_app.py  test_data_analysis.py  test_get_metadata.py  test_model.py  test_visualization_generator.py
thronetalk-game-of-thrones-summarizer/utils/: __init__.py  data_analysis.py  model.py  visualization_generator.py
